WebView(网页视图)基本用法（一些常见需求讲解） 需求2 WebView滚动事件的监听(重写WebView，覆盖里面的一个方法：onScrollChanged) 需求3 WebView加载网页设置进度条

--- a/webviewdemo01_basic/src/main/res/layout/activity_scroll_web_view.xml
+++ b/webviewdemo01_basic/src/main/res/layout/activity_scroll_web_view.xml
@@ -8,10 +8,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ProgressBar
+            android:id="@+id/custom_progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:progressDrawable="@drawable/custom_progress_bar_shape"
+            android:visibility="gone" />
+
         <LinearLayout
             android:id="@+id/rl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/custom_progressBar"
             android:background="#ffffff"
             android:orientation="horizontal">
 
@@ -42,8 +51,8 @@
                 android:id="@+id/horiSv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_gravity="center"
+                android:layout_weight="1"
                 android:scrollbars="none">
 
                 <TextView
@@ -79,7 +88,7 @@
             android:id="@+id/web_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/line"/>
+            android:layout_below="@id/line" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/btn_top"
@@ -89,7 +98,7 @@
             android:layout_alignParentRight="true"
             android:layout_margin="16dp"
             android:src="@drawable/pullup_icon_big"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
     </RelativeLayout>
 
