新增webView加载进度条，网络判断及提示设置网络封装代码

--- a/webviewdemo01_basic/src/main/res/layout/activity_scroll_web_view.xml
+++ b/webviewdemo01_basic/src/main/res/layout/activity_scroll_web_view.xml
@@ -8,6 +8,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <include
+            android:id="@+id/web_view_error_page"
+            layout="@layout/web_view_error_page"
+            android:visibility="visible"/>
+
         <ProgressBar
             android:id="@+id/custom_progressBar"
             style="?android:attr/progressBarStyleHorizontal"
